--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="container">
@@ -46,27 +47,42 @@
               </div>
             </div>
           </nav>
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleControls" class="carousel slide panda-slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="col-md-7">
-                  
-                </div>
-                <div class="col-md-5">
-                  <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                </div>
+                  <div class="row d-flex align-items-center p-5">
+                      <div class="col-md-7">
+                        <h1>Mega LCD TV For Sports</h1>
+                        <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                        <h3>$1200</h3>
+                        <button class="btn btn-warning">Buy Now</button>
+                      </div>
+                      <div class="col-md-5">
+                          <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-7"></div>
+                <div class="row d-flex align-items-center p-5">
+                  <div class="col-md-7">
+                    <h1>Cool Dude Headphone</h1>
+                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                    <h3>$420</h3>
+                    <button class="btn btn-warning">Buy Now</button>
+                  </div>
                   <div class="col-md-5">
                     <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-7"></div>
+                <div class="row d-flex align-items-center p-5">
+                  <div class="col-md-7">
+                    <h1>X-Box for your living room</h1>
+                    <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                    <h3>$600</h3>
+                    <button class="btn btn-warning">Buy Now</button>
+                  </div>
                   <div class="col-md-5">
                     <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                   </div>
@@ -84,7 +100,7 @@
           </div>
     </header>
     <main>
-      <section class="container overflow-hidden mt-5">
+      <section class="container overflow-hidden mt-5 categories">
         <div class="row gx-5">
           <div class="col">
             <div class="p-3 rounded bg-success d-flex align-items-center justify-content-around">
@@ -107,17 +123,17 @@
           </div>
         </div>
       </section>
-      <section class="mt-5">
+      <section class="mt-5 p-5">
         <h3>Shoes</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card h-100 shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card panda-card h-100 shadow-lg p-3 mb-5 bg-white rounded">
               <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Supply 350</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer panda-card-footer">
                 <button class="btn btn-warning">Buy now >></button>
               </div>
             </div>
@@ -148,7 +164,7 @@
           </div>
         </div>
       </section>
-      <section class="mt-5">
+      <section class="mt-5 p-5">
         <h3>Backpack</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -201,6 +217,9 @@
         </div>
       </section>
     </main>
+    <footer class="text-center mt-5">
+      <small>©2021. Panda Commerce. All rights reserved. Outing with Sadman, Bangladesh.</small>
+    </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
